--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome</title>
+  <title>Cat Memes (but not really)</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
-  Hi there!
+	<h1>How Paper is Made</h1>
+	<p>*May not be entirely accurate</p>
+	<div>
+		<h2>The Raw Materials</h2>
+		<h3>Trees</h3>
+			<p> Half the fiber used in paper is from wood that has been purposely harvested to make paper.
+				The other half is generally from recycled wood fiber from sawmills, veggies, and
+				other recyclables. </p>
+			<p> Trees commonly used are coniferous trees for their longer cellulose fibers which creates
+				stronger paper! These are considered softwoods in the industry. However, because of 
+				innovative paper making technology, hardwoods (deciduous trees) are also processable. 
+		<h3>Other Plant Material</h3>
+			<p>Demand is so high that other plants have been used in the paper making process such as 
+				bamboo and flax. Cigarette paper (or rolling paper as the more general term), is made 
+				from flax so us cigarette smokers don't have to breathe in bleached paper, its a win-win
+				for everyone. </p>
+    <div>
+    <div>
+    	<h2> </h2>
+    </div>
 </body>
 </html>
