Forgot to specify user name, testing

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,7 +25,7 @@
 				for everyone. </p>
     <div>
     <div>
-    	<h2> </h2>
+    	<h2>The Manufacturing Process </h2>
     </div>
 </body>
 </html>
