--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,121 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Cat Memes (but not really)</title>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-	<div id = "menu">
-		<p class = "header">Raw Materials</p>
-		<p class = "header">Manufacturing</p>
-		<p class = "header">Environment</p>
-	</div>
-	<div id = "main">
-		<h1>HOW PAPER IS MADE</h1>
-	</div>
-	<h2 id = "althead">The Raw Materials</h2>
-	<div id = "raw">
-		<h3>Trees</h3>
-			<p>Half the fiber used in paper is from wood that has been purposely
-			harvested to make paper. The other half is generally from recycled
-			wood fiber from sawmills, veggies, and other recyclables.</p>
-			<p>Trees commonly used are coniferous trees for their longer
-			cellulose fibers which creates stronger paper! These are considered
-			softwoods in the industry. However, because of innovative paper
-			making technology, hardwoods (deciduous trees) are also processable.
-		<h3>Other Plant Material</h3>
-			<p>Demand is so high that other plants have been used in the paper
-			making process such as bamboo and flax. Cigarette paper (or rolling
-			paper as the more general term), is made from flax so us cigarette
-			smokers don't have to breathe in bleached paper, its a win-win for
-			everyone.</p>
-		<h3>Other Materials</h3>
-			<p>They need to color the paper and throw in chemicals and things too
-			like bleaches and dyes and various organic and inorganic fillers.
-			This is why we probably shouldn't eat paper</p>
-		</div>
-    </div>
-    <h2 id = "mainhead">The Manufacturing Process </h2>
-    <div id = "manu">    	
-    	<h3>Making Pulp</h3>
-			<p>In the mechanical process, logs are first tumbled in drums to
-				remove the bark. The logs are then sent to grinders, which break
-				the wood down into pulp by pressing it between huge revolving
-				slabs. The pulp is filtered to remove foreign objects. In the
-				chemical process, wood chips from de-barked logs are cooked in a
-				chemical solution. This is done in huge vats called digesters. The
-				chips are fed into the digester, and then boiled at high pressure
-				in a solution of Paper sodium hydroxide and sodium sulfide. The
-				chips dissolve into pulp in the solution. Next the pulp is sent
-				through filters. Bleach may be added at this stage, or colorings.
-				The pulp is sent to the paper plant.</p>
-		<h3>Beating</h3>
-			<p>The pulp is next put through a pounding and squeezing process
-				called, appropriately enough, beating. Inside a large tub, the pulp
-				is subjected to the effect of machine beaters. At this point,
-				various filler materials can be added such as chalks, clays, or
-				chemicals such as titanium oxide. These additives will influence
-				the opacity and other qualities of the final product. Sizings are
-				also added at this point. Sizing affects the way the paper will
-				react with various inks. Without any sizing at all, a paper will be
-				too absorbent for most uses except as a desk blotter. A sizing such
-				as starch makes the paper resistant to water-based ink (inks
-				actually sit on top of a sheet of paper, rather than sinking in). A
-				variety of sizings, generally rosins and gums, is available
-				depending on the eventual use of the paper. Paper that will receive
-				a printed design, such as gift wrapping, requires a particular
-				formula of sizing that will make the paper accept the printing
-				properly.</p>
-		<h3>Pulp to Paper</h3>
-			<p>In order to finally turn the pulp into paper, the pulp is fed or
-				pumped into giant, automated machines. One common type is called
-				the Fourdrinier machine, which was invented in England in 1807.
-				Pulp is fed into the Fourdrinier machine on a moving belt of fine
-				mesh screening. The pulp is squeezed through a series of rollers,
-				while suction devices below the belt drain off water. If the paper
-				is to receive a water-mark, a device called a dandy moves across
-				the sheet of pulp and presses a design into it. The paper then
-				moves onto the press section of the machine, where it is pressed
-				between rollers of wool felt. The paper then passes over a series
-				of steam-heated cylinders to remove the remaining water. A large
-				machine may have from 40 to 70 drying cylinders.</p>
-		<h3>Finishing</h3>
-			<p>Finally, the dried paper is wound onto large reels, where it
-				will be further processed depending on its ultimate use. Paper is
-				smoothed and compacted further by passing through metal rollers
-				called calendars. A particular finish, whether soft and dull or
-				hard and shiny, can be imparted by the calendars. The paper may be
-				further finished by passing through a vat of sizing material. It
-				may also receive a coating, which is either brushed on or rolled
-				on. Coating adds chemicals or pigments to the paper's surface,
-				supplementing the sizings and fillers from earlier in the process.
-				Fine clay is often used as a coating. The paper may next be
-				supercalendered, that is, run through extremely smooth calendar
-				rollers, for a final time. Then the paper is cut to the desired
-				size.</p>
-	</div>
-	<h2 id = "althead2">Environment Concerns</h2>
-	<div id = "enviro">
-		<p>The number of trees and other vegetation cut down in order to
-			make paper is enormous. Paper companies insist that they plant as
-			many new trees as they cut down. Environmentalists contend that the
-			new growth trees, so much younger and smaller than what was removed,
-			cannot replace the value of older trees. Efforts to recycle used
-			paper (especially newspapers) have been effective in at least
-			partially mitigating the need for destruction of woodlands, and
-			recycled paper is now an important ingredient in many types of paper
-			production. </p>
-		<p>The chemicals used in paper manufacture, including dyes, inks,
-			bleach, and sizing, can also be harmful to the environment when they
-			are released into water supplies and nearby land after use. The
-			industry has, sometimes with government prompting, cleared up a large
-			amount of pollution, and federal requirements now demand
-			pollutionfree paper production. The cost of such clean-up efforts is
-			passed on to the consumer.</p>
-	</div>
-	<p class = "footnote">*Inspired by the great Dwight Schrute and information stolen from
-	<a href="http://www.madehow.com/Volume-2/Paper.html">here</a></p>
+	<script type="text/javascript" src="/js/main.js"></script>
 </body>
-<!-- Questions I have: how to incorporate javascript without having to make tons of containers -->
 </html>
