incorporated require.js and json (broken)

--- a/src/main/webapp/pages/menu.html
+++ b/src/main/webapp/pages/menu.html
@@ -2,4 +2,5 @@
 	<p class = "header">Raw Materials</p>
 	<p class = "header">Manufacturing</p>
 	<p class = "header">Environment</p>
+	<p class = "header">New View</p>
 </div>
