--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <title>Cat Memes (but not really)</title>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+  <script data-main="js/app" src="js/lib/require.js"></script>
 </head>
 <body>
-	<script type="text/javascript" src="/js/main.js"></script>
+	<!-- <script type="text/javascript" src="/js/main.js"></script> -->
 </body>
 </html>
